[package]
name = "swarm-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.89"
js-sys = "0.3.66" # <-- Add this line

# Optional but highly recommended: gives you better error messages in the browser console
console_error_panic_hook = { version = "0.1.7", optional = true }

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Optimize for small file size and fast execution
opt-level = 3
lto = true